2003-07-11  Don Porter  <dgp@users.sourceforge.net>

        * library/package.tcl:  Corrected [pkg_mkIndex] bug reported on
        comp.lang.tcl.  The indexer was searching for newly indexed packages
        instead of newly provided packages.

2003-07-04  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/expr.n: Tighten up the wording of some operations. [Bug 758488]

	* tests/cmdAH.test: Made tests of [file mtime] work better on FAT
	filesystems. [Patch 760768]  Also a little general cleanup.

2003-06-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Add -ieee when
	compiling with cc and add -mieee when compiling
	with gcc under OSF1-V5 "Tru64" systems.
	[Bug 748957]

2003-06-24  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/encoding.n: Corrected the docs to say that [source] uses the
	system encoding, which it always did anyway (since 8.1) [Bug 742100]

2003-06-23  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFCmd.c: fix to bad error message when trying to
	do 'file copy foo ""'. [Bug 756951]
	* tests/fCmd.test: added two new tests for the bug.

	* doc/FileSystem.3: documentation fix [Bug 720634]

2003-06-18  Miguel Sofer <msofer@users.sf.net>

	* generic/tclNamesp.c (Tcl_Export): removed erroneous comments
	[Bug 756744]

2003-06-17  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclCmdMZ.c:
	* tests/regexp.test: fixing of bugs related to regexp and regsub
	matching of empty strings.  Addition of a number of new tests.

2003-06-10  Miguel Sofer <msofer@users.sf.net>

	* generic/tclBasic.c:
	* generic/tclExecute.c: let TclExecuteObjvInternal call
	TclInterpReady instead of relying on its callers to do so; fix for
	the part of [Bug 495830] that is new in 8.4. 
	* tests/interp.test: Added tests 18.9 (knownbug) and 18.10

2003-06-09  Don Porter  <dgp@users.sourceforge.net>

        * string.test (string-4.15): Added test for [string first] bug